Added designs to Inventory

--- a/Dashboard_Version1.0/Dashboard_Version1.0/MainDashboard/DashboardContent.resx
+++ b/Dashboard_Version1.0/Dashboard_Version1.0/MainDashboard/DashboardContent.resx
@@ -344,7 +344,7 @@
         54uqkP0biSveui78xMfBbPYPrqkueZtuKdQAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="cuiPictureBox9.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="NotificationIcon.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAW
         JQAAFiUBSVIk8AAAAfVJREFUaEPtmYFNAzEMRW8ERmAERmAENoAR2AA2gA1gg7IBIzACIzAC+EmNFH3l
