--- a/Dashboard_Version1.0/Dashboard_Version1.0/MainDashboard/AddItem.resx
+++ b/Dashboard_Version1.0/Dashboard_Version1.0/MainDashboard/AddItem.resx
@@ -118,13 +118,28 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="cuiCalendarDatePicker1.Icon" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="DateDeliveredCDP.Icon" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAMZJREFUSEvt
         lUEKgzAQRdM79GpewEKPVqQLF90XepYuXHuD+H+Y1KYZjY1IEHzw0ZnPnwEDxhTDWnulpIxI+UkQflFS
         RqR8FQQqqJFw7wfgeYYe0vfSfGYr9iJg1BB5Q37AU7ylC5glNfsBaLZQB52kdoOcqaD5zEKc0Upr5DeA
         96xD5gxKypFJ40+KL3AHt1Kfww/4NldqdsHmn+hYcCxIU3RB8DfNgVmZof5NLxDx90GOpu8DAoM32h3S
         wkt0g/QbbacYMwAXS6cRGXz0uQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="WarrantyFD.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAihJREFUWEft
+        lk1IFVEUgB9kEYKrQLTI1rYKhEjFne0z6dFaoaCMoK0gLkVxL9guo0S3ubOI3LStrW5aRr+iaVDevnPm
+        XObnzTj3jU9o8T74kHfuOecd5943M7U2bf4rnHMdeB+f41qOS3jD0lsPzVexjD/4xEpaB02vaXvnvuEE
+        juc4j39ReIrnrPzk0Oy2tnVu3UK5sC55e5rp3Fu8E+gYXrQ2jbAo/6GwZqFCyBlC2Ypm+Y0T1iYNC0ED
+        sN6L7zXTuR8o5ybEDTzCQ7xk7WIIlg7A2nX8pFnObWO/LQVB/iutZBstFEPQDxDCa7xgpcFQ81Krnatb
+        KIZgyABfcA7PWllTUPdCmsCxA5QewjLo0YM3UU7+MHZaXH5BX/F0BqB2BN+gHLYk+7iMcoAv44CVxBA8
+        0QDUzaC/SRUhWzhiJWlYqDwANY+j0hQ7KPHs1djFq1YaQ7DSAORfwQOtTKN9+JsdQNjS4iQEqw6wEJU1
+        4Aco2pZBbeAhUHWAj1FZA2UDzGoDD4GqA/yKyvTOWEfpI+p7Q+Kz+BD9ljzTBh4CkiBUHUAO3V30Tz+9
+        xInP4hQWDhD0OM5C/oeorIGmt8C/kHzHSUxOXmQXyktKHmUDpA+hQNDfq0N5gH3otyHJcQO80y/MwsIZ
+        vIcrmPdMz7podY8wS9GN6Cc29RgPgqbTWHS5PZ9x2EpajzTHTcwOIu+Q8krfY6mnC1/UjaN4CwfxvC21
+        yVCr/QPcVsER6iVV4gAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
